kubernetes/skywalker/printers/printers.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute

metadata:
  name: printer-v02-8nhft

spec:
  hostnames:
    - printer-v02-8nhft.feldman.in
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: feldman-in
      namespace: istio-system
  rules:
    - backendRefs:
        - group: networking.istio.io
          kind: Hostname
          name: printer-v02-8nhft.local
          port: 80
